Add more statictics to the algorithm